# nextlang

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  Makefile  README.md  REPORT.md  changelog.txt  implementation_plan.md  main.cpp  report.txt  run_tests.bat
docs/: language_reference.md  project_report.md
examples/: firewall_test.nxl  routing_test.nxl
examples_code/: broadcast_and_loops.nxl  broadcast_test.nxl  drop_test.nxl  firewall_test.nxl  full_features.nxl  logic_test.nxl  routing_test.nxl  sample1.nxl  security_audit.nxl
grammar/: grammar.bnf
scratch/: test_openssl.cpp
src/: ast.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  semantic.cpp  semantic.h
tests/: test_lexer.cpp  test_parser.cpp  test_semantic.cpp
